--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,15 @@
 TODO: loosely in order
-Test node counts move ordering with least valuable attacker / most valuable victim [ ]
+Test node counts move ordering with least valuable attacker / most valuable victim [x]
+  - before, depth 3: 41797 total nodes
+  - after, depth 3: 35267 total nodes!
+  - after with check prioritization, depth 3: 31918 total nodes!
+  - before, depth 4: 943698
+  - after, depth 4: 896234
+  - after with check prioritization, depth 4: 632385
+  - continue to cut down on nodes searched
+  
+Perft Testing [ ]
+MirrorBoard Testing [ ]
 Investigate the PV calculation [ ]
   - 1st move seems reasonable but 2nd moves less so
   - Being able to use PV array for move ordering is crucial
@@ -10,4 +20,14 @@ Transposition Tables https://www.chessprogramming.org/Transposition_Table [ ]
 Killer Moves https://www.chessprogramming.org/Killer_Heuristic [ ]
 History Heuristics https://www.chessprogramming.org/History_Heuristic [ ]
 Late Move Reduction https://www.chessprogramming.org/Late_Move_Reductions [ ]
+UCI [ ]
+
+Update Insufficient Material for knights / bishops [ ]
+
+
+Misc
+Github Action [ ]
+Profiling [ ]
+Code Cleanup / Generalization in MoveGeneration [ ]
+Rename / README [ ]
 
