--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,8 @@
 TODO: loosely in order
-Test node counts move ordering with least valuable attacker / most valuable victim [x]
-  - before, depth 3: 41797 total nodes
-  - after, depth 3: 35267 total nodes!
-  - after with check prioritization, depth 3: 31918 total nodes!
-  - after w/ check prioritization and cap score alone 31883 nodes!
-  - before, depth 4: 943698
-  - after, depth 4: 896234
-  - after with check prioritization, depth 4: 632385
-    - w/ cap score alone 633634
-  - continue to cut down on nodes searched
-  
-Perft Testing [ ]
+Perft Testing [x]
 MirrorBoard Testing [ ]
+Code Refactor in MoveGeneration [ ]
+Update Insufficient Material for knights / bishops [ ]
 Update Mobility to be piece-specific, knights, bishops, queen, rook: [ ]
 Investigate the PV calculation [ ]
   - 1st move seems reasonable but 2nd moves less so
@@ -25,13 +16,7 @@ History Heuristics https://www.chessprogramming.org/History_Heuristic [ ]
 Late Move Reduction https://www.chessprogramming.org/Late_Move_Reductions [ ]
 UCI [ ]
 
-Update Insufficient Material for knights / bishops [ ]
-
-
 Misc
-Github Action [ ]
-Profiling [ ]
-Code Cleanup / Generalization in MoveGeneration [ ]
 PGN Export [ ]
 Rename / README [ ]
 
