add lichess style insufficient material rules

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
 TODO: loosely in order
-Kill PieceSquares [ ]
-Update Insufficient Material for knights / bishops [ ]
 Investigate the PV calculation [ ]
   - 1st move seems reasonable but 2nd moves less so
   - Being able to use PV array for move ordering is crucial
@@ -18,6 +16,6 @@ UCI [ ]
 Misc
 PGN Export [ ]
 Pawn Structure eval [ ]
-Piece Mobility eval for knights, bishops, queen, rook: [ ]
+Piece Mobility eval for knights, bishops, queen(?), rook: [ ]
 Continue Mirrorboard testing [ ]
 Rename / README [ ]
