--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,11 @@
 TODO: loosely in order
-Investigate the PV calculation and PV search [ ]
-  - 1st move seems reasonable but 2nd moves less so
-  - Being able to use PV array for move ordering is crucial
-  - try to feed move into search to search that move first
+Search PV move first [ ]
 Quiescence https://www.chessprogramming.org/Quiescence_Search [ ]
 Iterative Deepening https://www.chessprogramming.org/Iterative_Deepening [ ]
 Legal Move Generation with Bitboards to remove need to make / unmake moves to
 determine legality [ ]
-Static Exchange Evaluation [ ]
 Transposition Tables https://www.chessprogramming.org/Transposition_Table [ ]
+Static Exchange Evaluation [ ]
 Killer Moves https://www.chessprogramming.org/Killer_Heuristic [ ]
 History Heuristics https://www.chessprogramming.org/History_Heuristic [ ]
 Late Move Reduction https://www.chessprogramming.org/Late_Move_Reductions [ ]
